--- a/css/custom.css
+++ b/css/custom.css
@@ -1,12 +1,40 @@
-.emphasis-title h1 {
-    color: #FFF;
-    text-shadow: 1px 1px 1px black;
-    font-size: 6em;
+.dark .slider-caption,
+.dark .slider-caption h2 {
+	color: #FFF;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.15);
 }
 
-.back-image {
-	background-image: url('../images/custom/viaduct.jpg');
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-size: cover;
+
+
+.swiper-slide {
+    position: relative;
+    background: grey;
+    overflow: hidden;
 }
+
+.swiper-slide:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0.4;
+    background-image: url('../images/custom/viaduct.jpg');
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    -ms-background-size: cover;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+
+#header.full-header #logo {
+    padding-right: 30px;
+    margin-right: 30px;
+    border-right: none;
+}
+
