--- a/css/custom.css
+++ b/css/custom.css
@@ -36,5 +36,17 @@
     padding-right: 30px;
     margin-right: 30px;
     border-right: none;
+    padding-left: 30px;
 }
 
+#header.full-header #primary-menu > ul {
+    float: left;
+    padding-right: 15px;
+    margin-right: 15px;
+    border-right: none;
+}
+
+body.stretched #header.full-header .container {
+    width: 100%;
+    padding: 0;
+}
