--- a/css/custom.css
+++ b/css/custom.css
@@ -61,6 +61,13 @@ body.stretched #header.full-header .container {
     z-index: 1;
 }
 
+#map_container_mobile {
+    display: none;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
 .img-wrapper {
     position: relative;
 }
@@ -116,9 +123,29 @@ body.stretched #header.full-header .container {
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
+    #map_container {
+        display: none;
+    }
+
+    #map_container_mobile {
+        display: block;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
 }
 
 @media (min-width: 480px) and (max-width: 767px) {
+    #map_container {
+        display: none;
+    }
+
+    #map_container_mobile {
+        display: block;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
 }
 
 @media (max-width: 479px) {
@@ -207,6 +234,17 @@ body.stretched #header.full-header .container {
     #footer > .container > .footer-widgets-wrap > .col_one_third > .subscribe-widget > #widget-subscribe-form {
         position: relative;
         top: 15px;
+    }
+
+    #map_container {
+        display: none;
+    }
+
+    #map_container_mobile {
+        display: block;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
     }
 
 }
