--- a/css/custom.css
+++ b/css/custom.css
@@ -68,6 +68,11 @@ body.stretched #header.full-header .container {
     z-index: 1;
 }
 
+#map-heading-mobile {
+    display: none;
+}
+
+
 .img-wrapper {
     position: relative;
 }
@@ -133,6 +138,17 @@ body.stretched #header.full-header .container {
         height: 100%;
         z-index: 1;
     }
+
+    #map-heading-large {
+        display: none;
+    }
+
+    #map-heading-mobile {
+        display: block;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
 }
 
 @media (min-width: 480px) and (max-width: 767px) {
@@ -141,6 +157,17 @@ body.stretched #header.full-header .container {
     }
 
     #map_container_mobile {
+        display: block;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
+
+    #map-heading-large {
+        display: none;
+    }
+
+    #map-heading-mobile {
         display: block;
         width: 100%;
         height: 100%;
@@ -236,16 +263,6 @@ body.stretched #header.full-header .container {
         top: 15px;
     }
 
-    #map_container {
-        display: none;
-    }
-
-    #map_container_mobile {
-        display: block;
-        width: 100%;
-        height: 100%;
-        z-index: 1;
-    }
 
 }
 
