--- a/css/custom.css
+++ b/css/custom.css
@@ -72,7 +72,6 @@ body.stretched #header.full-header .container {
     display: none;
 }
 
-
 .img-wrapper {
     position: relative;
 }
@@ -263,7 +262,27 @@ body.stretched #header.full-header .container {
         top: 15px;
     }
 
+    #map_container {
+        display: none;
+    }
 
+    #map_container_mobile {
+        display: block;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
+
+    #map-heading-large {
+        display: none;
+    }
+
+    #map-heading-mobile {
+        display: block;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
 }
 
 
