--- a/css/custom.css
+++ b/css/custom.css
@@ -283,6 +283,11 @@ body.stretched #header.full-header .container {
         height: 100%;
         z-index: 1;
     }
+
+    .move-down {
+        position: relative;
+        margin: 150px 0 60px 0;
+    }
 }
 
 
