--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,5 @@
+/* Custom Media Queries are at the bottom of this file */
+
 .dark .slider-caption,
 .dark .slider-caption h2 {
     color: #FFF;
@@ -119,12 +121,22 @@ body.stretched #header.full-header .container {
     top: 20px;
 }
 
+.mobile-text {
+        text-shadow: 1px 1px black;
+    }
+
 /* Custom Media Queries */
 
 @media (min-width: 992px) and (max-width: 1199px) {
+    .mobile-text {
+        text-shadow: 1px 1px black;
+    }
 }
 
 @media (max-width: 991px) {
+    .mobile-text {
+        text-shadow: 1px 1px black;
+    }
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
@@ -149,6 +161,10 @@ body.stretched #header.full-header .container {
         height: 100%;
         z-index: 1;
     }
+
+    .mobile-text {
+        text-shadow: 1px 1px black;
+    }
 }
 
 @media (min-width: 480px) and (max-width: 767px) {
@@ -172,6 +188,10 @@ body.stretched #header.full-header .container {
         width: 100%;
         height: 100%;
         z-index: 1;
+    }
+
+    .mobile-text {
+        text-shadow: 1px 1px black;
     }
 }
 
@@ -288,6 +308,10 @@ body.stretched #header.full-header .container {
     .move-down {
         position: relative;
         margin: 150px 0 60px 0;
+    }
+
+    .mobile-text {
+        text-shadow: 1px 1px black;
     }
 }
 
